# ethereum-marketdepth

./: Dockerfile  README.md  docker-compose.yaml  grabBinanceOrderbook.py  pyproject.toml
jupyternotebooks/: explore-data.ipynb  time-delayed-prediction.ipynb
