[tool.poetry]
name = "ethereum-marketdepth"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.4.0"
ta = "^0.11.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
